jellyfin-ffmpeg (7.0.2-2) unstable; urgency=medium

  * Add bwdif_videotoolbox filter
  * Fix the default pkt thread queue size on certain platform
  * Add 12bit videotoolbox decoding support for HEVC
  * Fix the sub2video perf regressions
  * Update dependencies

 -- nyanmisaka <nst799610810@gmail.com>  Wed, 18 Sep 2024 20:37:24 +0800

jellyfin-ffmpeg (7.0.2-1) unstable; urgency=medium

  * New upstream version 7.0.2
  * Rename package to jellyin-ffmpeg7
  * Update build scripts and dependencies
  * Add ICtCp based tonemap method to vt/cuda/ocl tonemap
  * Add ACES Reference Gamut Compression to vt/cuda/ocl tonemap
  * Add DoVi reshaping support to software tonemapx

 -- nyanmisaka <nst799610810@gmail.com>  Thu, 1 Aug 2024 22:10:36 +0800

jellyfin-ffmpeg (6.0.1-8) unstable; urgency=medium

  * Add detection of DTS:X and DTS:X IMAX
  * Add detection of Atmos
  * Fix DOVI peak calculation
  * Drop the EOL Debian buster build
  * Add SIMD optimized tonemapx filter
  * Add fast code path for bgra in videotoolbox overlay
  * Improve macOS build performance
  * Fix QSV deint 3:2 pulldown undefined behavior
  * Add AC-4 decoder for ATSC 3.0 audio
  * Add relative luminance mode to vt/cuda/ocl tonemap
  * Update build scripts and dependencies
  * Sync fixes from ffmpeg-rockchip
  * Enable libxml2

 -- nyanmisaka <nst799610810@gmail.com>  Wed, 24 Jul 2024 20:57:11 +0800

jellyfin-ffmpeg (6.0.1-7) unstable; urgency=medium

  * Add DOVI descriptor support in mpegtsenc
  * Add low priority decoding and key-frame only decoding to VideoToolbox
  * Sync RKMPP fixes from ffmpeg-rockchip
  * Fix a typo in the CUDA/OpenCL transpose filter
  * Fix some warnings-as-errors in GCC 14
  * Update dependencies

 -- nyanmisaka <nst799610810@gmail.com>  Tue, 21 May 2024 17:09:43 +0800

jellyfin-ffmpeg (6.0.1-6) unstable; urgency=medium

  * Fix Noble builds and update dependencies
  * Add RKMPP MJPEG/JPEG encoder
  * Add VideoToolbox MJPEG encoder
